--- a/style/src/main/res/layout/list_item_media_line.xml
+++ b/style/src/main/res/layout/list_item_media_line.xml
@@ -5,8 +5,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/colorPrimary">
+        android:layout_height="wrap_content">
 
         <TextView
             android:id="@+id/titleTextView"
