--- a/style/src/main/res/values/styles.xml
+++ b/style/src/main/res/values/styles.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="Theme.Home" parent="Theme.MaterialComponents.Light.NoActionBar">
+    <style name="Theme.Movie" parent="Theme.MaterialComponents.Light.NoActionBar">
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimary</item>
         <item name="colorAccent">@color/colorAccent</item>
-        <item name="android:windowBackground">@color/colorPrimary</item>
+        <item name="android:windowBackground">@color/bgWindow</item>
+        <item name="bottomNavigationStyle">@style/Widget.MaterialComponents.BottomNavigationView.Colored</item>
     </style>
+
+    <style name="Theme.Movie.AppBar" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 </resources>
