--- a/style/src/main/res/values/colors.xml
+++ b/style/src/main/res/values/colors.xml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#333333</color>
-    <color name="colorAccent">#ff751a</color>
+    <color name="colorPrimary">#ff751a</color>
+    <color name="colorAccent">#333333</color>
+    <color name="colorPrimaryDark">#cc5200</color>
 
-    <color name="grey">#9E9E9E</color>
-
-    <color name="bgWindow">#1a1a1a</color>
-    <color name="bgMedia">#333333</color>
+    <color name="bgWindow">#EFEEF1</color>
 </resources>
