--- a/style/src/main/res/values/dimens.xml
+++ b/style/src/main/res/values/dimens.xml
@@ -1,4 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="list_media_spacing">8dp</dimen>
+
+    <dimen name="menu_item_icon_size">24dp</dimen>
+    <dimen name="menu_item_ripple_size">48dp</dimen>
 </resources>
