refactor: Use an activity for user module.

--- a/app/src/main/res/navigation/navigation_main.xml
+++ b/app/src/main/res/navigation/navigation_main.xml
@@ -1,15 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<navigation xmlns:android="http://schemas.android.com/apk/res/android"
+<navigation
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/navigation_main"
     app:startDestination="@id/mainHomeFragment">
 
-    <fragment
-        android:id="@+id/mainUserFragment"
-        android:name="com.paligot.user.main.MainFragment"
-        android:label="MainUserFragment"
-        tools:layout="@layout/fragment_user_main" />
     <fragment
         android:id="@+id/mainHomeFragment"
         android:name="com.paligot.home.main.MainFragment"
@@ -17,8 +13,13 @@
         tools:layout="@layout/fragment_main">
         <action
             android:id="@+id/action_mainHomeFragment_to_mainUserFragment"
-            app:destination="@id/mainUserFragment"
-            app:enterAnim="@animator/slide_up"
-            app:popExitAnim="@animator/slide_down" />
+            app:destination="@+id/mainUserActivity"
+            app:enterAnim="@anim/slide_in_from_down" app:popExitAnim="@anim/slide_out_down"
+            app:exitAnim="@anim/nav_default_exit_anim" app:popEnterAnim="@anim/nav_default_pop_enter_anim"/>
     </fragment>
+    <activity
+        android:id="@+id/mainUserActivity"
+        android:name="com.paligot.user.main.MainUserActivity"
+        android:label="MainUserActivity"
+        tools:layout="@layout/activity_user_main"/>
 </navigation>
